Fix: wrap logo in h1 element for semantics

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,11 @@
     font-size: 200%;
 }
 
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
 h1, h2 {
     font-family: 'Monoton', cursive;
 }
